--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
-    <script defer src="./script.js"></script>
+    <!--script defer src="./script.js"></script>-->
+    <script src="./pokemon.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Rubik:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Pokedex</h1>
     
-    
+    <p>get information for any pokemon</p>
+    <input type="text" id="input-el" />
+    <button id="submit-btn">get pokemon</button>
+
+    <div class="div-wrapper">
+        <img src="" alt="" id="image" >
+    </div>
+    <p id="name"></p>
+    <p id="type"></p>
+    <p id="height"></p>
+    <p id="weight"></p>
 </body>
 </html>
